fix font sizing and alignments

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -2,7 +2,7 @@
 #about {
     padding: 50px 10px 10px;
     background: #1ba49c;
-    height: 400px;
+    height: 360px;
 
     .container {
         max-width: 1000px;
