--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -20,7 +20,7 @@
 
 * {
   // font-family: 'Montserrat', sans-serif;
-  font-family: 'Europa';
+  font-family: 'Europa', sans-serif;
   box-sizing: border-box;
   transition: all .2s ease-in-out;
 }
@@ -50,7 +50,7 @@ h1, h2, h3 {
 }
 
 h2 {
-  font-size: 28px;
+  font-size: 36px;
   font-weight: 700;
   padding: 20px 0;
 }
