--- a/src/styles/Services.scss
+++ b/src/styles/Services.scss
@@ -1,9 +1,10 @@
 #services {
     margin: -6rem auto 10rem;
-    max-width: 1200px;
     padding: 0 20px;
 
     ul {
+        max-width: 1200px;
+        margin: auto;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         grid-gap: 20px;
@@ -12,7 +13,7 @@
             grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
         }
 
-        li {            
+        li {
             .card {
                 background-color: #fff;
                 box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.14);
@@ -25,9 +26,13 @@
                 -webkit-box-pack: center;
                 min-height: 100%; // keeps heights the same height as tallest element
 
+                h2 {
+                    font-size: 32px;
+                }
+
                 p {
-                    padding-left: 5px;
-                    padding-right: 5px;
+                    padding-left: 10px;
+                    padding-right: 10px;
                 }
         
                 i {
